--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,16 +1,42 @@
 <!doctype html>
-<html>
+<html lang="<%= I18n.locale.to_s %>">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title><%= config.company_name + " - " + current_page.data.title %></title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self';<%= config.meta_csp_settings %>">
+    <base href="<%= config.host %>">
+    <%= partial "bricks/meta_geo_position" %>
+    <meta name="description" content="<%= current_page.data.description %>">
+    <meta name="abstract" content="<%= current_page.data.abstract %>">
+    <%= partial "bricks/meta_open_graph" %>
+    <% # TODO:
+       # robots
+       # app icons
+       # javascript at the end to prevent render blocking
+       # theme color (android stuff)
+       # manifest (android stuff)
+       # font-face
+       # google analytics...?
+       # dns-prefetch / preload / preconnect?
+       # canonical
+       # cookies?
+       # alternate links %>
+
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
   </head>
   <body>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 340" class="middleman-logo" aria-labelledby="middleman-logo__title" role="img">
+      <title id="middleman-logo__title">Middleman</title>
+      <path class="middleman-logo__top-left-bar" fill-opacity=".45" d="M0 40L200 0v30L0 60z"/>
+      <path class="middleman-logo__top-right-bar" fill="#fff" d="M200 0l200 40v20L200 30z"/>
+      <path class="middleman-logo__left-m" fill-opacity=".45" d="M0 78v184l45 5V152l45 83 47-83v129l53 7V52l-57 8-43 83-43-70z"/>
+      <path class="middleman-logo__right-m" fill="#fff" d="M400 78v184l-45 5V152l-45 83-47-83v129l-53 7V52l57 8 43 83 43-70z"/>
+      <path class="middleman-logo__bottom-left-bar" fill-opacity=".45" d="M0 300l200 40v-30L0 280z"/>
+      <path class="middleman-logo__bottom-right-bar" fill="#fff" d="M200 340l200-40v-20l-200 30z"/>
+    </svg>
     <%= yield %>
   </body>
 </html>
