--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -4,6 +4,9 @@ $font-family-heading: "Roboto Condensed", -apple-system, BlinkMacSystemFont, sys
 $font-size: 16px;
 
 // ---- Colors ----------------------------------
+$color-black-transparent: transparentize(#000, 0.95);
+$color-white: #fff;
+
 $color-primary: #5888e5;
 $color-secondary: #e480b0;
 $color-tertiary: #f9db01;
@@ -11,7 +14,7 @@ $color-font: #272727;
 $color-link: $color-secondary;
 $color-link-hover: darken($color-link, 10%);
 $color-selection: transparentize($color-tertiary, 0.2);
-$color-white: #fff;
 
 // ---- Grid ------------------------------------
 $grid-gap: 0.75rem;
+$spacing-small: 0.75rem;
