Add navigation toggle button

--- a/source/bricks/header/_header.erb
+++ b/source/bricks/header/_header.erb
@@ -14,4 +14,7 @@
       <li><%= link_to "Contact", "/contact" %></li>
     </ul>
   </nav>
+  <button id="navToggleButton">
+    <div class="bar"></div>
+  </button>
 </header>
