--- a/source/bricks/header/_header.scss
+++ b/source/bricks/header/_header.scss
@@ -1,54 +1,113 @@
 header {
   background: $color-primary;
 
-  @include for-tablet-portrait-up {
-    nav {
+  nav {
+    @include for-tablet-portrait-up {
       display: grid;
       grid-template-columns: 10rem auto;
       grid-template-rows: auto auto;
     }
-  }
 
 
-  .logo {
-    align-items: center;
-    color: $color-white;
-    column-gap: $grid-gap;
-    display: grid;
-    font-family: $font-family-heading;
-    font-weight: 700;
-    grid-template-columns: 3rem auto;
-    grid-template-rows: auto auto;
-    padding: $spacing-small;
-    text-decoration: none;
-    text-transform: uppercase;
-
-    &:hover,
-    &:focus {
-      background-color: $color-black-transparent;
-      color: $color-white;
-    }
-  }
-
-  ul {
-    @include for-tablet-portrait-up {
+    .logo {
       align-items: center;
-      display: flex;
-      margin-left: auto;
-    }
-
-
-    li a {
       color: $color-white;
-      display: block;
+      column-gap: $grid-gap;
+      display: grid;
       font-family: $font-family-heading;
+      font-weight: 700;
+      grid-template-columns: 3rem auto;
+      grid-template-rows: auto auto;
       padding: $spacing-small;
       text-decoration: none;
+      text-transform: uppercase;
 
       &:hover,
       &:focus {
         background-color: $color-black-transparent;
         color: $color-white;
+      }
+    }
+
+    ul {
+      @include for-tablet-portrait-up {
+        align-items: center;
+        display: flex;
+        margin-left: auto;
+      }
+
+
+      li a {
+        color: $color-white;
+        display: block;
+        font-family: $font-family-heading;
+        padding: $spacing-small;
+        text-decoration: none;
+
+        &:hover,
+        &:focus {
+          background-color: $color-black-transparent;
+          color: $color-white;
+        }
+      }
+    }
+  }
+
+  #navToggleButton {
+    background: none;
+    border-color: transparent;
+    border-width: .75rem .25rem;
+    cursor: pointer;
+    height: 3rem;
+    padding: 0;
+    position: relative;
+    width: 3rem;
+
+    &:hover,
+    &:focus {
+      background-color: $color-black-transparent;
+      border-color: $color-black-transparent;
+    }
+
+    &.active {
+      .bar {
+        top: .625rem;
+      }
+
+      .bar::before {
+        top: 0;
+      }
+
+      .bar::after {
+        top: 0;
+      }
+    }
+
+    .bar,
+    .bar::before,
+    .bar::after {
+      background-color: $color-white;
+      height: .25rem;
+      left: 0;
+      position: absolute;
+      width: 100%;
+    }
+
+    .bar {
+      top: 0;
+
+      &::before,
+      &::after {
+        content: "";
+        display: block;
+      }
+
+      &::before {
+        top: .625rem;
+      }
+
+      &:after {
+        top: 1.25rem;
       }
     }
   }
