--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,14 +1,20 @@
 ---
-title: Home
-description: This must be under 500 characters.
+title: Legobox is a box of bricks
+description: To set up a Middleman website. This must be under 500 characters.
 abstract: Summary of one sentence and this must be under 100 characters.
 og_content_type: ["product", "blog", "website", "book", "movie", ... ]
 og_images:
-  - "test.jpg"
-  - "test2.jpg"
+  - "/images/example1.jpg"
+  - "/images/example2.jpg"
 ---
+<%= partial("bricks/hero/hero", :locals => { :image => "/images/example1.jpg",
+                                             :image_alt => "Example1",
+                                             :title => current_page.data.title,
+                                             :text => current_page.data.description,
+                                             :button_link => "/images/example1.jpg",
+                                             :button_text => "Contact us"
+                                          }) %>
 
-<h1><%= current_page.data.title %></h1>
 
 <%= link_to(
   "Read Documentation",
