--- a/source/stylesheets/_baseplate.scss
+++ b/source/stylesheets/_baseplate.scss
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .container {
   margin: 0 auto;
+  padding: 0 $grid-gap;
 
   @include for-tablet-landscape-up {
     max-width: 900px;
