--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,11 +9,11 @@ og_images:
 ---
 <%= partial("bricks/hero/hero", :locals => { :image => "/images/example1.jpg",
                                              :image_alt => "Example1",
+                                             :layer_color => "primary",
                                              :title => current_page.data.title,
                                              :text => current_page.data.description,
                                              :button_link => "/images/example1.jpg",
-                                             :button_text => "Contact us"
-                                          }) %>
+                                             :button_text => "Contact us" }) %>
 
 
 <%= link_to(
