--- a/source/bricks/button/_button.scss
+++ b/source/bricks/button/_button.scss
@@ -4,6 +4,7 @@
   border-width: $border-width-thin;
   display: inline-block;
   font-size: 1rem;
+  margin-bottom: .625rem;
   padding: .375rem 1rem;
 
   &.large {
