--- a/source/bricks/hero/_hero.erb
+++ b/source/bricks/hero/_hero.erb
@@ -1,14 +1,17 @@
 <section class="hero">
   <%= image_tag image, :alt => image_alt %>
-  <% if title || text || (button_link && button_text)  %>
+  <% if locals[:layer_color] %>
+    <div class="layer <%= layer_color %>"></div>
+  <% end %>
+  <% if locals[:title] || locals[:text] || (locals[:button_link] && locals[:button_text]) %>
     <div class="container">
-      <% if title %>
+      <% if locals[:title] %>
         <%= content_tag title_tag ||= :h1, :class => "title" do title end %>
       <% end %>
-      <% if text %>
+      <% if locals[:text] %>
         <p class="text"><%= text %></p>
       <% end %>
-      <% if button_link && button_text %>
+      <% if locals[:button_link] && locals[:button_text] %>
         <%= partial("bricks/button/button", :locals => { :to => button_link,
                                                          :text => button_text,
                                                          :button_class => "white ghost large" }) %>
