--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,8 @@ og_images:
 ---
 <%= partial("bricks/hero/hero", :locals => { :image => "/images/example1.jpg",
                                              :image_alt => "Example1",
-                                             :layer_color => "primary",
+                                             :variant => "full",
+                                             :color_overlay => "primary",
                                              :title => current_page.data.title,
                                              :text => current_page.data.description,
                                              :button_link => "/images/example1.jpg",
