--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -30,6 +30,8 @@ $color-selection: transparentize($color-tertiary, 0.2);
 
 // ---- Grid ------------------------------------
 $grid-gap: 0.75rem;
+$max-width-desktop-up: 1080px;
+$max-width-tablet-landscape-up: 900px;
 $spacing-small: 0.75rem;
 
 // ---- Breakpoints -----------------------------
