--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -5,3 +5,4 @@
 @import "../bricks/button/button";
 @import "../bricks/header/header";
 @import "../bricks/hero/hero";
+@import "../bricks/logo/logo";
