--- a/source/bricks/logo/_logo.erb
+++ b/source/bricks/logo/_logo.erb
@@ -1,5 +1,5 @@
 <% link_to "/", :class => "logo" do %>
-  <%= image_tag logo_image_path, :alt => config.company_name %>
+  <%= image_tag logo_image_path, alt: config.company_name %>
   <% if show_company_name %>
     <div class="company-name"><%= config.company_name %></div>
   <% end %>
