--- a/source/bricks/button/_button.erb
+++ b/source/bricks/button/_button.erb
@@ -1,1 +1,1 @@
-<%= link_to(text, to, :class => "button " + variant ||= "default") %>
+<%= link_to(text, to, class: "button " + variant ||= "default") %>
