--- a/source/bricks/header/_header.erb
+++ b/source/bricks/header/_header.erb
@@ -1,7 +1,7 @@
 <header>
   <nav class="container">
-    <%= partial("bricks/logo/logo", :locals => { :logo_image_path => "legobox-logo.svg",
-                                                 :show_company_name => true }) %>
+    <%= partial("bricks/logo/logo", locals: { logo_image_path: "legobox-logo.svg",
+                                              show_company_name: true }) %>
     <button id="navToggleButton">
       <div class="bar"></div>
     </button>
