Make it possible to use icons in buttons

--- a/source/bricks/button/_button.erb
+++ b/source/bricks/button/_button.erb
@@ -1,1 +1,9 @@
-<%= link_to(text, to, class: "button " + variant ||= "default") %>
+<% link_to to, class: "button " + variant ||= "default" do %>
+  <% if locals[:icon_left] %>
+    <%= inline_svg icon_left, class: "inline-svg left" %>
+  <% end %>
+  <%= text %>
+  <% if locals[:icon_right] %>
+    <%= inline_svg icon_right, class: "inline-svg right" %>
+  <% end %>
+<% end %>
