--- a/source/bricks/button/_button.scss
+++ b/source/bricks/button/_button.scss
@@ -1,16 +1,22 @@
 .button {
+  align-items: center;
   border-radius: $border-radius;
   border-style: solid;
   border-width: $border-width-thin;
-  display: inline-block;
+  display: inline-flex;
   font-size: 1rem;
   margin-bottom: .625rem;
-  padding: .375rem 1rem;
+  padding: .5rem 1.25rem;
 
   &.large {
     border-width: $border-width-thick;
     font-size: 1.25rem;
-    padding: .46875rem 1.25rem;
+    padding: .625rem 1.875rem;
+
+    .inline-svg {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
   }
 
   &.default,
@@ -23,6 +29,10 @@
       background-color: $color-primary-hover;
       border-color: $color-primary-hover;
     }
+
+    .inline-svg path {
+      fill: $color-white;
+    }
   }
 
   &.secondary {
@@ -34,6 +44,10 @@
       background-color: $color-secondary-hover;
       border-color: $color-secondary-hover;
     }
+
+    .inline-svg path {
+      fill: $color-white;
+    }
   }
 
   &.primary.ghost {
@@ -44,6 +58,14 @@
       background-color: $color-primary;
       border-color: $color-primary;
       color: $color-white;
+
+      .inline-svg path {
+        fill: $color-white;
+      }
+    }
+
+    .inline-svg path {
+      fill: $color-primary;
     }
   }
 
@@ -55,6 +77,14 @@
       background-color: $color-secondary;
       border-color: $color-secondary;
       color: $color-white;
+
+      .inline-svg path {
+        fill: $color-white;
+      }
+    }
+
+    .inline-svg path {
+      fill: $color-secondary;
     }
   }
 
@@ -66,6 +96,29 @@
       background-color: $color-white;
       border-color: $color-white;
       color: $color-font;
+
+      .inline-svg path {
+        fill: $color-font;
+      }
+    }
+
+    .inline-svg path {
+      fill: $color-white;
+    }
+  }
+
+  .inline-svg {
+    width: 1rem;
+    height: 1rem;
+
+    &.left {
+      margin-left: -.375rem;
+      margin-right: .5rem;
+    }
+
+    &.right {
+      margin-left: .5rem;
+      margin-right: -.375rem;
     }
   }
 }
