--- a/source/bricks/hero/_hero.erb
+++ b/source/bricks/hero/_hero.erb
@@ -14,7 +14,7 @@
       <% if locals[:button_link] && locals[:button_text] %>
         <%= partial("bricks/button/button", locals: { to: button_link,
                                                       text: button_text,
-                                                      icon_left: "images/icons/_phone-handset.svg",
+                                                      icon_left: "images/icons/_phone.svg",
                                                       variant: "white ghost large" }) %>
       <% end %>
     </div>
