Fix CSP in head to permit Google fonts, fix some layout spacing

--- a/source/bricks/header/_header.scss
+++ b/source/bricks/header/_header.scss
@@ -28,6 +28,7 @@ header {
         color: $color-white;
         display: block;
         font-family: $font-family-heading;
+        font-weight: 800;
         padding: $spacing-small;
         text-decoration: none;
 
