--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,7 +10,7 @@ og_images:
 <%= partial("bricks/hero/hero", locals: { image: "/images/example1.jpg",
                                           image_alt: "Example1",
                                           variant: "full",
-                                          color_overlay: "primary",
+                                          color_overlay: "gradient",
                                           title: current_page.data.title,
                                           text: current_page.data.description,
                                           button_link: "/images/example1.jpg",
